Fix spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,10 +6,10 @@ body{
 header{
     background-color: lavender;
     color: rgb(128, 92, 136);
-    text-align: center;
     margin: 0 auto;
     font-family: 'Times New Roman', Times, serif;
     font-size: 40px;
+    margin-left: 50px;
 }
 h1{
     background-color: lavender;
@@ -28,12 +28,13 @@ p{
 nav {
     background-color: lavender;
     color: rgb(128, 92, 136);
+    margin-left: 50px;
     /* text-align: center; */
 }
 nav a{
     background-color: lavender;
     color: rgb(128, 92, 136);
-    /* text-align: center; */
+    margin-left: 50px;
     font-family: 'Times New Roman', Times, serif;
     font-size: 20px;
 }
@@ -45,6 +46,7 @@ nav a{
     width: 350px;
     height: auto;
     margin-left: 50px;
+    border: 5px rgb(128, 92, 136);
     /* margin-right: 100px; */
 }
 section {
@@ -65,7 +67,7 @@ footer {
 
 .alignLeft {
     float: left;
-    margin-right: 100px;
+    margin-left: 50px;
 }
 
 .alignCenter {
@@ -74,7 +76,7 @@ footer {
 
 .alignRight {
     float: right;
-    margin-right: 100px;
+    margin-right: 50px;
 }
 
 .container {
